# pyfarm-control

./: .gitignore  DEPLOYMENT.md  Dockerfile  EXTENSIONS.md  README.md  docker-compose.yml  pyproject.toml
examples/: kombucha_batch.bio.yaml  oyster_fruiting.pyfarm.yaml  sample_sensor_data.csv  yogurt_culture.bio.yaml
pyfarm/control/: api.py
pyfarm/control/actuators/: base.py  logging_actuator.py
pyfarm/control/engine/: context.py  evaluator.py  runner.py  stage_machine.py
pyfarm/control/extensions/: __init__.py  notifiers.py  protocols.py  registry.py  sinks.py
pyfarm/control/replay/: fake_sensor.py  scenario.py
pyfarm/control/spec/: loader.py  schema.py  validator.py
scripts/: setup.sh
src/pyfarm/biology/: __init__.py  cli.py  derived.py  spec.py
src/pyfarm/control/: api.py  extensions.py
src/pyfarm/control/actuators/: __init__.py  base.py  logging.py  mqtt.py  pwm.py  relay.py
src/pyfarm/control/alerts/: __init__.py  evaluator.py
src/pyfarm/control/controllers/: __init__.py  base.py  hysteresis.py  pid.py  schedule.py
src/pyfarm/control/engine/: __init__.py  context.py  derived.py  errors.py  runner.py  safety.py  stage_machine.py  store.py
src/pyfarm/control/persist/: sqlite.py
src/pyfarm/control/replay/: scenario.py
src/pyfarm/control/sensors/: analog.py  base.py  dht22.py  fake.py  replay.py
tests/: conftest.py  test_derived.py  test_evaluator.py  test_notifier_sink.py  test_registry.py  test_replay.py  test_runner_events.py  test_runner_safety.py  test_schema.py  test_spec.py  test_validator.py
tests/control/: test_extensions.py
tests/control/actuators/: test_actuators.py
tests/control/alerts/: test_alerts.py
tests/control/controllers/: test_hysteresis.py  test_schedule_and_pid.py
tests/control/engine/: test_derived.py  test_derived_edge_cases.py  test_error_handling.py  test_integration_replay.py  test_safety.py  test_stage_machine.py
tests/control/sensors/: test_replay.py
tests/integration/: test_e2e.py
(+5 files in other folders)
