[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-control"
version = "0.1.0"
description = "Control engine for pyfarm GrowSpecs: runner, controllers, actuators, alerts, replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core>=0.1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
