[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-control"
version = "0.1.0"
description = "Grow spec loader, control engine, and replay harness for pyfarm"
requires-python = ">=3.11"
dependencies = [
    "pyfarm-core[storage]>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["pyfarm"]
